CHANGES IN VERSION 1.35.1
-------------------------

UTILITIES

    o add `summary.SeqUnitListClass()`


CHANGES IN VERSION 1.32.0
-------------------------

NEW FEATURES

    o new option 'ret.idx' in `seqSetFilter()` for unsorted sample and variant
      indices

    o new option 'ret.idx' in `seqSetFilterAnnotID()` for unsorted variant
      index

    o rewrite the function `seqSetFilterPos()`: new options 'ref' and 'alt',
      'multi.pos=TRUE' by default

    o new option 'packed.idx' in `seqAddValue()` for packing an indexing
      variable

    o new option 'warn' in `seqSetFilter()` to enable or disable the warning

    o new functions `seqNewVarData()` and `seqListVarData()` for
      variable-length data

UTILITIES

    o allow no variant in `seqApply()` and `seqBlockApply()`

    o the list object returned from `seqGetData()` always have names if there
      are more than one input variable names

BUG FIXES

    o `seqGDS2VCF()` should output "." instead of NA in the FILTER column

    o `seqGetData()` should support factor when '.padNA=TRUE' or '.tolist=TRUE'
    
    o fix `seqGDS2VCF()` with factor variables

    o `seqSummary(gds, "$filter")` should return a data frame with zero row if
      'annotation/filter' is not a factor


CHANGES IN VERSION 1.30.0
-------------------------

UTILITIES

    o show a warning when an unsorted index is used in `seqSetFilter()`

    o show a message if `seqVCF_Header()` fails

    o a new option 'chr_prefix' in `seqGDS2VCF()`

BUG FIXES

    o `seqVCF_Header()` fixes 'contig' in the header of VCF if there are
      different fields


CHANGES IN VERSION 1.28.1
-------------------------

BUG FIXES

    o `seqRecompress(, verbose=FALSE)` works correctly

    o `seqSetFilter(, action="push+set")` should not reset the filter
      before setting a new filter


CHANGES IN VERSION 1.28.0
-------------------------

NEW FEATURES

    o new functions `seqUnitSlidingWindows()`, `seqUnitApply()`,
      `seqUnitFilterCond()`
